--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -19,6 +19,7 @@ body {
     font-family:$font-stack;
     font-size:16px;
     padding: 0px 5px;
+    overflow-wrap: break-word;
     /*width:80%;
     margin:0 auto;*/
 }
